[package]
name = "saleae_binary_format_parser"
version = "0.1.0"
edition = "2021"
build = "build/build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# protospec = {git = "https://github.com/Protryon/protospec.git"}
protospec = {git = "https://github.com/MGlolenstine/protospec.git", branch = "const_float"}
# protospec = {path = "../protospec/protospec"}

[build-dependencies]
# protospec-build = {git = "https://github.com/Protryon/protospec.git"}
protospec-build = {git = "https://github.com/MGlolenstine/protospec.git", branch = "const_float"}
# protospec-build = {path = "../protospec/protospec-build"}
